Add the documentation to the Week-4 notebook

--- a/tutorial/LLM+Langchain/Week-2/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-2/notebook.ipynb
@@ -457,10 +457,10 @@
     "\n",
     "# 我的這台電腦要跑一個小時左右，所以留給你們，反正不用錢\n",
     "# 我直接使用已經轉換完成的 vectorstore\n",
-    "# vectorstore = FAISS.from_documents(documents, embedding=embeddings)\n",
+    "vectorstore = FAISS.from_documents(documents, embedding=embeddings)\n",
     "\n",
     "# it seems that you cannot use Chinese character in the filename\n",
-    "# vectorstore.save_local(filename)"
+    "vectorstore.save_local(filename)"
    ]
   },
   {
