--- a/tutorial/LLM+Langchain/Week-4/notebook-websearch-exp.ipynb
+++ b/tutorial/LLM+Langchain/Week-4/notebook-websearch-exp.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b82d813c-8b0e-4eac-a2b4-d514644797b7",
    "metadata": {},
    "outputs": [],
@@ -67,10 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2d5823b5-5be4-44c8-9510-2dd233c39943",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ling\\miniconda3\\envs\\aicg\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from openai import OpenAI\n",
     "from textwrap import dedent\n",
@@ -101,9 +110,7 @@
     "    \n",
     "    return chat_prompt_template\n",
     "\n",
-    "credential_init()\n",
-    "\n",
-    "client = OpenAI(api_key=os.environ['OPENAI_API_KEY'])"
+    "credential_init()"
    ]
   },
   {
@@ -123,7 +130,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "S = requests.Session()\n",
+    "session = requests.Session()\n",
     "\n",
     "query = \"獵人中的念能力系統\"\n",
     "\n",
@@ -143,9 +150,9 @@
     "    \"User-Agent\": \"AI Tutorial Bot/1.0 (mengchiehling@gmail.com)\"\n",
     "}\n",
     "\n",
-    "R = S.get(url=URL, params=PARAMS, headers=HEADERS)\n",
+    "response = session.get(url=URL, params=PARAMS, headers=HEADERS)\n",
     "\n",
-    "data = R.json()"
+    "data = response.json()"
    ]
   },
   {
@@ -204,39 +211,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "12d2fe8d-5efc-4790-8523-61841f64c55a",
    "metadata": {},
    "outputs": [],
    "source": [
     "code_example = dedent(\"\"\"\n",
-    "    Name extraction: \n",
+    "    # Example 1: Name extraction using Pydantic and LangChain\n",
     "\n",
     "    from pydantic import BaseModel, Field\n",
     "    from langchain_core.output_parsers import PydanticOutputParser\n",
     "\n",
-    "    \n",
     "    class NameExtractor(BaseModel):\n",
-    "        name: str = Field(description=\"The returned name\")\n",
+    "        name: str = Field(description=\"The extracted name from the input text\")\n",
     "\n",
     "    output_parser = PydanticOutputParser(pydantic_object=NameExtractor)\n",
     "    format_instructions = output_parser.get_format_instructions()\n",
+    "\n",
+    "    ---\n",
+    "    # Example 2: Multiple product information extraction using Pydantic and Langchain\n",
+    "\n",
+    "    from typing import List\n",
+    "    \n",
+    "    class Product(BaseModel):\n",
+    "        name: str = Field(description=\"Product\")\n",
+    "        brand: str = Field(description=\"The brand name\")\n",
+    "        country_code: str = Field(description=\"ISO 3166-1 alpha-2 of the country of the brand\")\n",
+    "\n",
+    "    class ProductOutput(BaseModel):\n",
+    "        products: List[Product] = Field(description=\"A list of products\")\n",
+    "\n",
+    "    output_parser = PydanticOutputParser(pydantic_object=NameExtractor)\n",
+    "    format_instructions = output_parser.get_format_instructions()\n",
+    "    \n",
     "\"\"\")\n",
     "\n",
     "\n",
     "system_template = dedent(f\"\"\"\n",
-    "    You are a highly skilled Python developer with expertise in large language model with Langchain framework. \n",
-    "    Your task is to generate Python code to solve the user's problem.\n",
-    "    Leverage the Pydantic model. \n",
-    "    Your response must contain only the Python code — no explanations, comments, or additional text.\n",
+    "    You are an expert Python developer specializing in large language models and the LangChain framework.\n",
+    "    Your objective is to generate **only valid, executable Python code** that solves the user's request.\n",
     "\n",
-    "    Here is an example of expected structure:\n",
+    "    Requirements:\n",
+    "    - Use Pydantic models when defining structured outputs.\n",
+    "    - Ensure imports are correct and minimal.\n",
+    "    - Follow PEP 8 formatting standards.\n",
+    "    - Do not include any explanations, markdown, comments, or extra text outside the code block.\n",
+    "    - You have have the output_parser and the format_instruction of the Pydantic models.\n",
     "\n",
+    "    Example structure:\n",
     "    {code_example}\n",
     "\"\"\")\n",
     "\n",
-    "human_template = dedent(\"\"\"{query}\n",
-    "                            Code:\n",
+    "human_template = dedent(\"\"\"\n",
+    "                        {query}\n",
+    "                        Code:\n",
     "                        \"\"\")\n",
     "\n",
     "\n",
@@ -281,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8b5ae123-dceb-4701-850f-0731aaa39229",
    "metadata": {},
    "outputs": [],
@@ -346,29 +374,379 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc1af085-30e1-4076-861e-a6c9d23c9c95",
+   "cell_type": "markdown",
+   "id": "4636b5d7-9eb2-4dbd-abdb-d567b3c2592a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "query"
+    "## Fan Wiki\n",
+    "\n",
+    "萬機之神歐姆尼賽亞的化身\n",
+    "\n",
+    "https://warhammer40k.fandom.com/wiki/Titan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "269ff5cd-9999-4d28-b027-214c6931c426",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output"
+    "import requests\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "\n",
+    "url = \"https://warhammer40k.fandom.com/wiki/Titan\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "168e8b0f-0ade-4c64-a9e9-faff01bc786b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parsing_process(url):\n",
+    "    \"\"\"\n",
+    "    Fetches and extracts text content from a given URL.\n",
+    "\n",
+    "    Parameters:\n",
+    "    url (str): The URL of the web page to fetch and parse.\n",
+    "\n",
+    "    Returns:\n",
+    "    str: Cleaned text content extracted from the web page.\n",
+    "\n",
+    "    Raises:\n",
+    "    requests.exceptions.RequestException: If an error occurs while fetching the URL.\n",
+    "\n",
+    "    Notes:\n",
+    "    - This function sends a GET request to the specified URL.\n",
+    "    - It uses BeautifulSoup to parse the HTML content of the response.\n",
+    "    - Any <style> tags in the HTML are removed to extract only textual content.\n",
+    "    - The extracted text is cleaned by removing extra whitespace and empty lines.\n",
+    "    \"\"\"\n",
+    "    # Send a GET request to the URL\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    # Get the content of the response\n",
+    "    html_content = response.text\n",
+    "    \n",
+    "    soup = BeautifulSoup(html_content, 'html.parser')\n",
+    "    \n",
+    "    # 移除 style 和 script\n",
+    "    for tag in soup([\"style\", \"script\"]):\n",
+    "        tag.decompose()\n",
+    "\n",
+    "    # Extract and print only the text content\n",
+    "    text_content = soup.get_text(separator='\\n')\n",
+    "\n",
+    "    # Clean up the text (optional)\n",
+    "    cleaned_text = '\\n'.join(line.strip() for line in text_content.splitlines() if line.strip())\n",
+    "    \n",
+    "    return cleaned_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b8233ad-b643-4f9d-89ce-82c45c9ea8fd",
+   "metadata": {},
+   "source": [
+    "### 提取網頁內容"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "04bae55a-272c-427a-95da-10ed7a356401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_text = parsing_process(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7f509a1f-31dc-4fd4-810a-551ea8bf365f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"幫我找出所有忠誠派泰坦級別\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "90ee8b74-77c3-4be5-b24c-c05f8907a221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generated_code = code_generation.invoke({\"query\": query})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9dafadf0-5de4-414a-85c7-17bb56eed9ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```python\n",
+      "from pydantic import BaseModel, Field\n",
+      "from langchain_core.output_parsers import PydanticOutputParser\n",
+      "\n",
+      "class LoyalTitanExtractor(BaseModel):\n",
+      "    loyal_titans: list = Field(description=\"A list of all loyal Titan level\")\n",
+      "\n",
+      "output_parser = PydanticOutputParser(pydantic_object=LoyalTitanExtractor)\n",
+      "format_instructions = output_parser.get_format_instructions()\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(generated_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "27285b65-6f7b-4c39-8d4c-d587069394c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_vars = code_execution.invoke(generated_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "642b1378-98df-4b73-956e-c665dee674f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_answer_pipeline(output_parser, format_instructions):\n",
+    "\n",
+    "    human_template = dedent(\"\"\"{query}\n",
+    "                           \n",
+    "                           context:\n",
+    "                           {context}\n",
+    "                           output format instruction = {format_instruction} \n",
+    "                        \"\"\")\n",
+    "\n",
+    "\n",
+    "    input_ = {\"system\": {\"template\": \"You are a helpful AI assistant.\"},\n",
+    "              \"human\": {\"template\": human_template,\n",
+    "                        \"input_variable\": [\"query\"],\n",
+    "                        \"partial_variables\": {'format_instruction': format_instructions}\n",
+    "                        }}\n",
+    "    \n",
+    "    chat_prompt_template = build_standard_chat_prompt_template(input_)\n",
+    "    \n",
+    "    model = ChatOpenAI(model=\"gpt-4o-mini\")\n",
+    "    \n",
+    "    answer_pipeline = chat_prompt_template|model|output_parser\n",
+    "\n",
+    "    return answer_pipeline\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "12c0812c-b376-42fc-86b5-94905a66216b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer_pipeline = build_answer_pipeline(output_parser=local_vars['output_parser'], format_instructions=local_vars['format_instructions'])\n",
+    "\n",
+    "output = answer_pipeline.invoke({\"query\": query, \"context\": cleaned_text})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ee5c5626-2251-4dd0-aea2-ee32c69637cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Imperator-class Titan',\n",
+       " 'Warmonger-class Titan',\n",
+       " 'Warlord-class Titan',\n",
+       " 'Reaver-class Titan',\n",
+       " 'Dire Wolf-class Titan',\n",
+       " 'Warhound-class Titan',\n",
+       " 'Rapier-class Titan',\n",
+       " 'Executor-class Titan',\n",
+       " 'Apocalypse-class Titan',\n",
+       " 'Carnivore-class Titan',\n",
+       " 'Mirage-class Titan',\n",
+       " 'Warbringer Nemesis-class Titan',\n",
+       " 'Komodo-class Titan',\n",
+       " 'Punisher-class Titan',\n",
+       " 'Warmaster-class Titan',\n",
+       " 'Warmaster Iconoclast-class Titan',\n",
+       " 'Emperor Titans']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.loyal_titans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68be97fc-fcef-4fd2-93bc-8a2e5ee5c7fd",
+   "metadata": {},
+   "source": [
+    "#### 試試看更具有挑戰的問題"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "00cab201-42d2-48f8-8e65-ddd483e8497b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"幫我找出所有陣營的所有泰坦級別\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1564d576-7fae-410f-ab11-dfadc251d797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generated_code = code_generation.invoke({\"query\": query})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "27e4256d-4b94-4a11-8198-2a1f8351ff44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```python\n",
+      "from typing import List\n",
+      "from pydantic import BaseModel, Field\n",
+      "from langchain_core.output_parsers import PydanticOutputParser\n",
+      "\n",
+      "class TitanLevel(BaseModel):\n",
+      "    faction: str = Field(description=\"The faction of the titan\")\n",
+      "    level: str = Field(description=\"Titan level\")\n",
+      "\n",
+      "class TitanLevelsOutput(BaseModel):\n",
+      "    titans: List[TitanLevel] = Field(description=\"A list of titan levels for all factions\")\n",
+      "\n",
+      "output_parser = PydanticOutputParser(pydantic_object=TitanLevelsOutput)\n",
+      "format_instructions = output_parser.get_format_instructions()\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(generated_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a2ccc219-e4b1-43b7-b7b7-43cc0b0568c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_vars = code_execution.invoke(generated_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "5cf690ed-aa0d-49b7-8305-e585d63ea083",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer_pipeline = build_answer_pipeline(output_parser=local_vars['output_parser'], format_instructions=local_vars['format_instructions'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b6bbf949-3251-4d0c-a477-f78306fc3acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = answer_pipeline.invoke({\"query\": query, \"context\": cleaned_text})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4ced6149-cd6d-49aa-ad17-02e61c31cbba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[TitanLevel(faction='Imperium of Man', level='Rapier Scout Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Warhound Scout Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Dire Wolf Heavy Scout Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Reaver Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Komodo Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Punisher-class Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Executor Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Apocalypse Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Carnivore Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Mirage Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Warbringer Nemesis Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Warlord Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Warmaster Heavy Battle Titan'),\n",
+       " TitanLevel(faction='Imperium of Man', level='Emperor Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Subjugator Scout Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Questor Scout Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Feral Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Ravager Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Banelord Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Plaguelord Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Painlord Titan'),\n",
+       " TitanLevel(faction='Chaos', level='Warplord Titan'),\n",
+       " TitanLevel(faction='STC', level='Castigator-class Titan'),\n",
+       " TitanLevel(faction='Aeldari', level='Revenant Titan'),\n",
+       " TitanLevel(faction='Aeldari', level='Phantom Titan'),\n",
+       " TitanLevel(faction='Aeldari', level='Warlock Titan'),\n",
+       " TitanLevel(faction='Tyranids', level='Hierophant Bio-Titan'),\n",
+       " TitanLevel(faction='Tyranids', level='Hydraphant Bio-Titan'),\n",
+       " TitanLevel(faction='Tyranids', level='Vituperator Bio-Titan')]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.titans"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fecd3d86-1332-463c-bb29-ad0026e79dd7",
+   "id": "7d4521bb-f09c-4b21-8947-66b32c3fdb9e",
    "metadata": {},
    "outputs": [],
    "source": []
