Add the revised notebook_v2

--- a/tutorial/LLM+Langchain/Week-5/notebook_v2.ipynb
+++ b/tutorial/LLM+Langchain/Week-5/notebook_v2.ipynb
@@ -7,6 +7,25 @@
    "source": [
     "# 圖像描述 Image Captioning\n",
     "\n",
+    "**本章學完你將能學會什麼：**\n",
+    "\n",
+    "- 理解什麼是 *Image Captioning*，以及它在多模態人工智慧中的角色。  \n",
+    "- 學會如何使用 LangChain 與 OpenAI 多模態模型，根據圖片內容自動生成文字描述。  \n",
+    "- 熟悉圖片傳輸的三種常見方式（URL、Base64、multipart/form-data），並了解各自的優缺點。\n",
+    "- 掌握如何在 LangChain 中建立包含文字與圖片的 *HumanMessagePromptTemplate*。   \n",
+    "\n",
+    "**📘 最終你將具備的能力：**  \n",
+    "- 能夠撰寫 Python 程式，實現圖片 → 文字的自動化描述流程，並理解多模態模型輸入格式設計的核心概念。\n",
+    "- 能獨立構建多模態 LLM pipeline，讓模型根據圖片內容生成描述或回答問題，建立更智慧的視覺語言互動。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a82570c-339f-4a7d-ae48-8e16e69ae8a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Image Captioning：指的是模型根據圖片內容，自動生成一段客觀描述，例如「一隻黑色的狗在草地上奔跑」。\n",
     "\n",
     "## Image Captioning with Multimodal LLM"
@@ -135,6 +154,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "473691f5-55db-4612-b79a-88c4ca59e1c7",
+   "metadata": {},
+   "source": [
+    "圖片轉換成base64字串格式"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "13d1ece0-95f6-42e3-aaa0-42be38e28d41",
@@ -142,6 +169,14 @@
    "outputs": [],
    "source": [
     "image_str = image_to_base64(os.path.join(get_project_dir(), 'tutorial/LLM+Langchain/Week-5/AzueLaneAmagi.png'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78a62b08-4e7b-4a2a-9adb-5cc88ccaae4d",
+   "metadata": {},
+   "source": [
+    "建立image caption的human message template"
    ]
   },
   {
@@ -182,7 +217,7 @@
    "id": "c8d50d68-d27c-49eb-af1a-bb551b2674c4",
    "metadata": {},
    "source": [
-    "或是調用不同的模組"
+    "或是調用ImagePromptTemplate"
    ]
   },
   {
@@ -389,16 +424,25 @@
    "id": "8f13e2d2-79d0-4a70-99e4-6e8434cb7696",
    "metadata": {},
    "source": [
-    "## 應用概念：AI 趣味人格占卜\n",
+    "# 應用概念：AI 趣味人格占卜\n",
     "\n",
-    "### 靈感來源: \n",
+    "**本章學完你將能學會什麼：**\n",
+    "\n",
+    "- 理解如何將 *Image-to-Text* 模型延伸應用到創意情境，例如 AI 人格分析或娛樂性解讀。  \n",
+    "- 學會設計多張圖片的輸入流程，並將多模態輸入組裝成一個完整的推論任務。  \n",
+    "- 掌握如何在提示詞（prompt）中平衡「創意性」與「合理性」，並用英文提示提升模型表現。  \n",
+    "\n",
+    "**📘 最終你將具備的能力：**  \n",
+    "能設計並實作具娛樂性與互動性的 AI 多模態應用，將生成式模型的實驗結果轉化為可分享的用戶體驗。\n",
+    "\n",
+    "## 靈感來源: \n",
     "古人透過觀察龜殼裂紋、星象、手相或面相來推測命運與性格。這些方法，本質上都是「從圖像中讀出意義」。\n",
     "\n",
-    "### AI 對應\n",
+    "## AI 對應\n",
     "在人工智慧領域，這與 Image-to-Text (圖片轉文字) 類似：模型會對圖片進行解析，並生成對應的描述。\n",
     "我們延伸這個概念，將圖片輸入多模態大模型，請它嘗試給出「人格側寫」或「趣味解讀」。\n",
     "\n",
-    "### 重要聲明\n",
+    "## 重要聲明\n",
     "\n",
     "    - 本應用不具備臨床或科學效力\n",
     "\n",
@@ -406,18 +450,18 @@
     "\n",
     "    - 目的是探索 AI 生成式解讀的趣味與可能性\n",
     "\n",
-    "### 使用方式\n",
+    "## 使用方式\n",
     "\n",
-    "    - 上傳一張圖片（如手相、臉部照片、隨機物件）。\n",
+    "    - 上傳喜歡的圖片。\n",
     "\n",
-    "    - AI 生成對該圖片的描述與趣味性人格解析。\n",
+    "    - AI 基於該圖片進行人格側寫。\n",
     "\n",
     "    - 使用者可將結果當作「AI 占卜」般分享與互動。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d9647575-2353-43aa-b473-6603874bc419",
    "metadata": {},
    "outputs": [],
@@ -433,71 +477,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1df103d9-68e2-429d-8eae-9c029bcfe7f3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"display: flex; flex-direction: column;\"><div style=\"display: flex; justify-content: space-around; margin-bottom: 10px;\">\n",
-       "            <div>\n",
-       "                <img src=\"image_source/1girl,mast-208173699636910-22_08_55.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/1girl,past-3819172030-21_52_15.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/779946965812213661.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/784048109824007850.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        </div><div style=\"display: flex; justify-content: space-around; margin-bottom: 10px;\">\n",
-       "            <div>\n",
-       "                <img src=\"image_source/852689680133523130.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/858231870498817120.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/860485010342337721.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/862295879149704988.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        </div><div style=\"display: flex; justify-content: space-around; margin-bottom: 10px;\">\n",
-       "            <div>\n",
-       "                <img src=\"image_source/862839349278941305.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/869177760008927387.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/893609253049256269.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        \n",
-       "            <div>\n",
-       "                <img src=\"image_source/893834211625062992.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
-       "            </div>\n",
-       "        </div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -527,6 +510,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6535a7a7-2f8c-4189-8e47-8423c764d3a9",
+   "metadata": {},
+   "source": [
+    "System Template (繁體中文版本)\n",
+    "\n",
+    "你是一個專業且樂於助人的人工智慧助理，專長於人格特質分析。\n",
+    "\n",
+    "你的任務是根據使用者感興趣或提供的圖片，分析並推測其人格特質。\n",
+    "請根據可觀察的視覺元素進行分析，例如主題、色彩、構圖、主體、情感氛圍與風格。\n",
+    "\n",
+    "請避免根據人口統計、文化或政治因素進行任何假設。\n",
+    "專注於心理層面與美學層面的詮釋，僅以圖片本身為依據。\n",
+    "\n",
+    "最終輸出語言應為繁體中文。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "507f8280-5fa8-4599-8904-5e3235e8d6a5",
+   "metadata": {},
+   "source": [
+    "因為LLM在英文上相對於其他的語言還有壓倒性的優勢，所以提示詞還是建議使用英文"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85be7d2a-af72-4cc9-aaa2-720cd7de38c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_template = {\"template\": dedent(\"\"\"\\\n",
+    "You are a helpful AI assistant specialized in personality profiling.\n",
+    "\n",
+    "Your task is to analyze and infer aspects of a user's personality based solely on the images they express interest in or provide.\n",
+    "Base your analysis on observable visual elements such as themes, colors, composition, subjects, emotional tone, and style.\n",
+    "\n",
+    "Avoid making assumptions based on demographic, cultural, or political factors. \n",
+    "Focus exclusively on psychological and aesthetic interpretations related to the images themselves.\n",
+    "\n",
+    "The output language should be in traditional Chinese (繁體中文).\n",
+    "\"\"\")}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5231f2a4-d063-4888-8c67-24a485961ac0",
@@ -534,18 +563,6 @@
    "outputs": [],
    "source": [
     "# 2 \n",
-    "\"\"\"\n",
-    "根據以下格式進行修改prompt\n",
-    "text_prompt_template = {\"template\": \"{question}\", \"input_variables\": [\"question\"]}\n",
-    "image_prompt_template = {\"type\": \"image\",\n",
-    "                         \"template\": {\"url\": \"data:image/jpeg;base64,{image_str}\"},\n",
-    "                         \"input_variables\": [\"image_str\"]}\n",
-    "\n",
-    "input_ = {\n",
-    "    \"system\": system_template,\n",
-    "    \"human\": [text_prompt_template, image_prompt_template],\n",
-    "}\n",
-    "\"\"\"\n",
     "def build_image_prompt(image_str: str):\n",
     "\n",
     "    return {\"type\": \"image\",\n",
@@ -553,10 +570,6 @@
     "\n",
     "\n",
     "human_template = []\n",
-    "\n",
-    "text_prompt_template = {\"template\": \"{question}\", \"input_variables\": [\"question\"]}\n",
-    "\n",
-    "human_template.append(text_prompt_template)\n",
     "\n",
     "for image_file in os.listdir(image_dir):\n",
     "    image_str = image_to_base64(os.path.join(image_dir, image_file))\n",
@@ -566,6 +579,16 @@
     "    \"system\": system_template,\n",
     "    \"human\": human_template,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aab59ca5-80c6-473e-a451-d16353a8c670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_template"
    ]
   },
   {
@@ -587,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async for msg in pipeline_.astream({\"question\": \"分析作者的審美品味\"}):\n",
+    "async for msg in pipeline_.astream({}):\n",
     "    print(msg, end=\"\", flush=True)"
    ]
   },
@@ -604,13 +627,54 @@
    "id": "e1e82f97-0d3e-4fbd-ae9f-8f6678feca40",
    "metadata": {},
    "source": [
+    "## 後端整合與部署（Flask / Streamlit）\n",
+    "\n",
+    "**本章學完你將能學會什麼：**\n",
+    "\n",
+    "- 學會如何以 Flask 建立 API，串接 LangChain Pipeline 並處理圖片上傳與回應。  \n",
+    "- 理解前後端資料流：Frontend → Flask → LangChain → GPT → Response。  \n",
+    "- 了解如何用 Streamlit 快速製作原型介面，並實現即時互動展示。  \n",
+    "\n",
+    "**📘 最終你將具備的能力：**  \n",
+    "能獨立建立完整的 AI Web 應用架構，從模型推論到前端展示都能自行部署與除錯。\n",
+    "\n",
+    "檔案結構\n",
+    "```\n",
     "app/\n",
-    "├── app.py               # Flask backend\n",
-    "├── static/\n",
-    "│   └── style.css        # (optional) styles\n",
-    "├── templates/\n",
-    "│   └── index.html       # frontend\n",
-    "├── image_psychic/       # folder to store uploaded images\n"
+    "├── app_flask.py               # Flask backend\n",
+    "├── app_server.py              # Langserve backend\n",
+    "├── app_streamlit.py           # Streamlit frontend\n",
+    "```\n",
+    "安裝\n",
+    ">- pip install streamlit uvicorn fastapi\n",
+    ">- streamlit run app_streamlit.py\n",
+    "\n",
+    "### 🧠 系統架構流程圖（視覺化版本）\n",
+    "\n",
+    "📱 **前端**\n",
+    "> HTML / Streamlit 介面  \n",
+    "> ⬇️ 上傳圖片與輸入問題  \n",
+    "\n",
+    "🧩 **Flask API**\n",
+    "> 接收請求 (`/generate`)  \n",
+    "> ⬇️ 將資料傳給後端推論鏈  \n",
+    "\n",
+    "🔗 **LangChain Pipeline**\n",
+    "> 建立 Prompt + Image Input  \n",
+    "> ⬇️ 呼叫多模態模型  \n",
+    "\n",
+    "🧠 **GPT 模型 (Image Caption / Personality Profiling)**\n",
+    "> 生成結果 → 回傳 JSON 給前端顯示"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "167f32f2-5594-47cd-bedb-e4785269145d",
+   "metadata": {},
+   "source": [
+    "進行後端測試\n",
+    "\n",
+    "模擬flask中將訊息傳給app_server"
    ]
   },
   {
@@ -625,6 +689,10 @@
     "\n",
     "@chain\n",
     "def image_to_base64(image_path: str) -> str:\n",
+    "\n",
+    "    f not os.path.exists(image_path):\n",
+    "        raise FileNotFoundError(f\"找不到圖片檔案: {image_path}\")\n",
+    "    \n",
     "    with Image.open(image_path) as image:\n",
     "        buffered = io.BytesIO()\n",
     "        image.save(buffered, format=\"JPEG\")\n",
@@ -639,50 +707,38 @@
     "    }\n",
     "\n",
     "\n",
-    "pipeline_ = image_to_base64|build_image_prompt\n",
+    "image_transformation_pipeline_ = image_to_base64|build_image_prompt\n",
     "\n",
     "# 建立模板\n",
     "human_template = []\n",
     "\n",
-    "# 文字提示詞: 想要問的問題\n",
-    "text_prompt_template = {\"template\": \"{question}\", \"input_variables\": [\"question\"]}\n",
-    "\n",
-    "human_template.append(text_prompt_template)\n",
-    "\n",
     "# 圖像提示詞: 輸入的圖片\n",
-    "files = [os.path.join(image_dir, image_file) for image_file in os.listdir(image_dir)]\n",
+    "image_files = [os.path.join(image_dir, image_file) for image_file in os.listdir(image_dir)]\n",
     "\n",
-    "human_template.extend(pipeline.batch(image_files))\n",
-    "\n",
-    "# for image_file in image_files:\n",
-    "#     image_str = image_to_base64(os.path.join(image_dir, image_file))\n",
-    "#     human_template.append(build_image_prompt(image_str))\n",
+    "human_template.extend(image_transformation_pipeline_.batch(image_files))\n",
     "\n",
     "payload = {\n",
     "    \"human\": human_template,\n",
-    "    \"question\": \"分析作者的審美品味\"\n",
     "}\n",
     "\n",
-    "# async with httpx.AsyncClient() as client:\n",
-    "#     async with client.stream(\"POST\", \"http://localhost:5000/app_image_psychic/astream\", json={\"input\":payload}) as response:\n",
-    "#         async for chunk in response.aiter_text():\n",
-    "#             print(chunk, end=\"\")\n",
-    "\n",
     "resp = requests.post(\"http://localhost:5000/app_image_psychic/invoke\", json={\"input\": payload})\n",
+    "\n",
+    "if resp.status_code != 200:\n",
+    "    print(f\"錯誤：{resp.status_code}, 回傳內容：{resp.text}\")\n",
     "\n",
     "print(resp.json())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20dffb78-45f5-43c2-9c86-6c372128236b",
+   "cell_type": "markdown",
+   "id": "28ac8795-38a6-4d54-a916-c2f7f29418f5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "直接使用圖片URL\n",
+    "做Image Caption的另一個選擇是上傳圖片的URL\n",
     "\n",
-    "大部分的情況下直接用URL可能不是那麼容易，因為需要先找到圖片的URL"
+    "大部分的情況下直接用URL可能不是那麼容易，因為需要先找到圖片的URL\n",
+    "\n",
+    "所以我們這邊就是簡單的帶過"
    ]
   },
   {
@@ -734,7 +790,18 @@
    "source": [
     "# 其他的Image Caption工具\n",
     "\n",
-    "## Danburoo Tag\n",
+    "**本章學完你將能學會什麼：**\n",
+    "\n",
+    "- 認識 WD-14、Florence 2 等開源影像描述與標籤模型的特色與應用情境。  \n",
+    "- 學會如何在本地環境中安裝、執行與測試開源標籤工具。  \n",
+    "- 理解第三方 API（如 fal.ai）的呼叫流程與授權機制。  \n",
+    "\n",
+    "**📘 最終你將具備的能力：**  \n",
+    "能靈活選擇與整合不同的影像理解工具，為專案找到最合適的技術方案與部署方式。\n",
+    "\n",
+    "## WD-14 Image Tagging\n",
+    "\n",
+    "這主要是用於ACG的內容\n",
     "\n",
     "- Online Service: https://huggingface.co/spaces/hysts/DeepDanbooru\n",
     "\n",
@@ -742,27 +809,19 @@
     "\n",
     "- Open Source: wd14_tagging\n",
     "\n",
-    "- https://github.com/corkborg/wd14-tagger-standalone/tree/main"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c382474a-d608-4295-9a70-598da5f632d4",
-   "metadata": {},
-   "source": [
-    "## How to use?\n",
+    "- https://github.com/corkborg/wd14-tagger-standalone/tree/main\n",
     "\n",
-    "-- git clone https://github.com/corkborg/wd14-tagger-standalone.git\n",
+    "### 安裝\n",
     "\n",
-    "-- conda create -n wd-14 python=3.10\n",
+    ">- git clone https://github.com/corkborg/wd14-tagger-standalone.git\n",
+    ">- conda create -n wd-14 python=3.10\n",
+    ">- conda activate wd-14\n",
+    ">- pip install -r requirements\n",
     "\n",
-    "-- conda activate wd-14\n",
+    "### 使用\n",
     "\n",
-    "-- pip install -r requirements\n",
-    "\n",
-    "-- python run.py --file <filename> --cpu\n",
-    "\n",
-    "-- python run.py --dir <dir> --cpu --model camie-tagger"
+    ">- python run.py --file <filename> --cpu\n",
+    ">- python run.py --dir <dir> --cpu --model camie-tagger"
    ]
   },
   {
@@ -797,7 +856,9 @@
    "id": "36c4f5aa-a6a2-4285-a012-c04387798426",
    "metadata": {},
    "source": [
-    "## Florence\n",
+    "## Florence 2\n",
+    "\n",
+    "這是一個開源的計算機視覺模型。他能做的其實不只於Image Caption，還包含了OCR等等的任務。\n",
     "\n",
     "https://huggingface.co/spaces/gokaygokay/Florence-2\n",
     "\n",
@@ -891,6 +952,14 @@
    "outputs": [],
    "source": [
     "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afb50d1b-0ef2-43db-832a-5b88646c8167",
+   "metadata": {},
+   "source": [
+    "測試在Google Colab上建立的vectorstore是否可運行"
    ]
   },
   {
